=== SVN

* Fixed Sequel.<xxx> methods to accept options hash as well as database name. Fixed Sequel.connect to accept options hash as well as URI (Wayne).

=== 0.4.1.2 (2007-12-04)

* Added release rake task (using RubyForge).

* Changed Model.is to accept variable arity.

* Implemented plugin loading for model classes.

* Fixed odbc-mssql and odbc adapters (thanks Dusty.)

* Implemented odbc-mssql adapter (thanks Dusty.)

=== 0.4.1.1 (2007-11-27)

* Fixed #first and #last functionality in Informix::Dataset (thanks Gerardo Santana).

=== 0.4.1 (2007-11-25)

* Put adapter files in lib/sequel/adapters. Requiring sequel/<adapter> is now deprecated. Users can now just require 'sequel' and adapters are automagically loaded (#93).

=== 0.4.0 (2007-11-24)

* Reorganized lib directory structure.

* Added support for dbi-xxx URI schemes (#86).

* Fixed problem in Database#uri where setting the password would raise an error (#87).

* Improved Dataset#insert_sql to correctly handle string keys (#92).

* Improved error-handling for worker threads. Errors are saved to an array and are accessible through #errors (#91).

* Dataset#uniq/distinct can now accept a column list for DISTINCT ON clauses.

* Fixed Model.all.

* Fixed literalization of strings with escape sequences in postgres adapter (#90).

* Added support for literalizing BigDecimal values (#89).

* Fixed column qualification for joined datasets (thanks Christian).

* Implemented experimental informix adapter.

=== 0.3.4.1 (2007-11-10)

* Changed Dataset#select_sql to support queries without a FROM clause.

=== 0.3.4 (2007-11-10)

* Fixed MySQL adapter to allow calling stored procedures (thanks Sebastian).

* Changed Dataset#each to always return self.

* Fixed SQL functions without arguments in block filters.

* Implemented super-cool Symbol#cast_as method.

* Fixed error message in command-line tool if failed to load adapter (#85).

* Refactored code relating to column references for better extendibility (#88).
